bach update